p3/confs/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p3-ingress
  annotations:
    IOT/owner: "m&m's"
  labels:
    p3: dev
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil-playground
            port:
              number: 80
